<?xml version="1.0" encoding="utf-8"?>


    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/white_1"
        android:screenOrientation="portrait"
        tools:context=".view.MainActivity"
        android:layout_width="match_parent"
        android:fitsSystemWindows="true"

    android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen"
        android:windowSoftInputMode="adjustResize"
    android:layout_alignParentBottom="true"
        android:layout_height="match_parent"
    >

        <Button
            android:id="@+id/signIn_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingLeft="50dp"
            android:paddingTop="8dp"
            android:paddingRight="50dp"
            android:paddingBottom="8dp"
            android:text="@string/Log_in"
            android:textColor="@color/white"
            android:textSize="18sp"
            style="@style/ThemeOverlay.AppCompat.DayNight.ActionBar"

            android:background="@drawable/login_button_bk"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_textinput" />

        <ImageView
            android:id="@+id/imageview"
            android:layout_width="250dp"
            android:layout_height="200dp"
            android:layout_marginTop="32dp"
            android:padding="20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/logo_jood"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <!--
        <LinearLayout
            android:id="@+id/create_linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_30sdp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
-->


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="@string/Log_in"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginRight="8dp"
            android:text="@string/Log_in_words"
            android:textSize="18sp"
            android:textColor="@color/gray"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneOrMail_textinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="8dp"
            android:textColor="@color/black"
            app:startIconTint="@color/colorAccent"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView1"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mail_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:drawablePadding="6dp"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="4dp"
                android:textColor="@color/black"
                android:textSize="17sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_textinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/phoneOrMail_textinput"
            android:layout_margin="10dp"
            android:textColor="@color/black"


            app:endIconMode="password_toggle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:startIconTint="@color/colorAccent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            app:layout_constraintTop_toBottomOf="@+id/phoneOrMail_textinput"
            app:startIconDrawable="@drawable/ic_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="6dp"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="numberPassword"
                android:maxLines="1"
                android:padding="4dp"
                android:textColor="@color/black"
                android:textSize="17sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_scroll_group_2" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_scroll_group_1" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:srcCompat="@drawable/ic_scroll_group_3" />

    </androidx.constraintlayout.widget.ConstraintLayout>
